--- a/_generate_plots/Exploration/Execution time - all samples.ipynb
+++ b/_generate_plots/Exploration/Execution time - all samples.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "import os\n",
     "folder_path = \"/media/mfaria/Ganesha/20171219_backup_home_catec/Margarida/20190100_exploration/sim_data/valid\"\n",
-    "folder_path = \"/home/mfaria/Flying_Octomap_code/src/data/current\"\n",
+    "#folder_path = \"/home/mfaria/Flying_Octomap_code/src/data/current\"\n",
     "files = []\n",
     "# r=root, d=directories, f = files\n",
     "for r, d, f in os.walk(folder_path):\n",
@@ -40,8 +40,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The average minutes per view is 1.50018695652 +- nan\n",
-      "The median exploration time is 1.50018695652 bounded by 1.50018695652 and 1.50018695652\n"
+      "The average minutes per view is 2.42908640351 +- nan\n",
+      "The median exploration time is 2.42908640351 bounded by 2.42908640351 and 2.42908640351\n"
      ]
     }
    ],
@@ -73,8 +73,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The average is 34.5043 +- nan\n",
-      "The median exploration time is 34.5043 bounded by 34.5043 and 34.5043\n"
+      "The average is 92.3052833333 +- nan\n",
+      "The median exploration time is 92.3052833333 bounded by 92.3052833333 and 92.3052833333\n"
      ]
     }
    ],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -131,12 +131,12 @@
           "color": "#1f77b4"
          },
          "type": "pie",
-         "uid": "a950b03c-c815-11e9-8355-ace2d3611e0a",
+         "uid": "83ee80ca-c8ca-11e9-8355-ace2d3611e0a",
          "values": [
-          1538961,
-          164436,
-          25670,
-          341191
+          2076458,
+          1391799,
+          1143153,
+          926907
          ]
         }
        ],
@@ -184,8 +184,8 @@
     "fig=dict(data=[trace], layout=layout)\n",
     "\n",
     "plotly.offline.iplot(fig)\n",
-    "#pio.write_image(fig, '/media/mfaria/Ganesha/20171219_backup_home_catec/Margarida/20190100_exploration/sim_data/valid/execTime_pie.pdf', scale=2)\n",
-    "pio.write_image(fig, '/home/mfaria/Flying_Octomap_code/src/data/current/execTime_pie.pdf', scale=2)\n"
+    "pio.write_image(fig, '/media/mfaria/Ganesha/20171219_backup_home_catec/Margarida/20190100_exploration/sim_data/valid/execTime_pie.pdf', scale=2)\n",
+    "#pio.write_image(fig, '/home/mfaria/Flying_Octomap_code/src/data/current/execTime_pie.pdf', scale=2)\n"
    ]
   },
   {
