--- a/_generate_plots/Exploration/Execution time - all samples.ipynb
+++ b/_generate_plots/Exploration/Execution time - all samples.ipynb
@@ -40,8 +40,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The average minutes per view is 2.44729829932 +- nan\n",
-      "The median exploration time is 2.44729829932 bounded by 2.44729829932 and 2.44729829932\n"
+      "The average minutes per view is 3.26405454545 +- nan\n",
+      "The median exploration time is 3.26405454545 bounded by 3.26405454545 and 3.26405454545\n"
      ]
     }
    ],
@@ -73,8 +73,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The average is 119.917616667 +- nan\n",
-      "The median exploration time is 119.917616667 bounded by 119.917616667 and 119.917616667\n"
+      "The average is 143.6184 +- nan\n",
+      "The median exploration time is 143.6184 bounded by 143.6184 and 143.6184\n"
      ]
     }
    ],
@@ -131,12 +131,12 @@
           "color": "#1f77b4"
          },
          "type": "pie",
-         "uid": "eb21265c-ca47-11e9-8355-ace2d3611e0a",
+         "uid": "b97a5b9c-cfbe-11e9-a79e-ace2d3611e0a",
          "values": [
-          3109822,
-          2397619,
-          809269,
-          878347
+          3662349,
+          2263514,
+          802754,
+          1888487
          ]
         }
        ],
